# firecracker

.cargo/: config
api_server/: Cargo.toml
api_server/src/: http_service.rs
api_server/src/request/: vsock.rs
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/aarch64/: cache_info.rs  fdt.rs  gic.rs  gicv2.rs  gicv3.rs  layout.rs  mod.rs  regs.rs
arch/src/aarch64/gic/: dist_regs.rs  gicv2.rs  gicv3.rs  icc_regs.rs  mod.rs  redist_regs.rs  regs.rs
arch/src/aarch64/gic/gicv2/: mod.rs
arch/src/aarch64/gic/gicv2/regs/: dist_regs.rs  icc_regs.rs  mod.rs
arch/src/aarch64/gic/gicv3/: mod.rs
arch/src/aarch64/gic/gicv3/regs/: dist_regs.rs  icc_regs.rs  mod.rs  redist_regs.rs
arch/src/x86_64/: interrupts.rs  mod.rs  mptable.rs  regs.rs
cpuid/: Cargo.toml
devices/: Cargo.toml
devices/src/: bus.rs  lib.rs
devices/src/legacy/: mod.rs  rtc_pl031.rs  serial.rs
devices/src/virtio/: block.rs  mmio.rs  mod.rs  net.rs  queue.rs
dumbo/src/tcp/: connection.rs
fc_util/src/: lib.rs
kernel/src/cmdline/: mod.rs
kernel/src/loader/: mod.rs
kvm/: Cargo.toml
kvm/src/: ioctl_defs.rs  lib.rs
logger/: Cargo.toml
logger/src/: error.rs  lib.rs  writers.rs
memory_model/: Cargo.toml
memory_model/src/: guest_address.rs  guest_memory.rs  lib.rs  mmap.rs
rate_limiter/: Cargo.toml
src/: main.rs
sys_util/src/: eventfd.rs  lib.rs  signal.rs
vhost_backend/src/: lib.rs
vhost_gen/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: lib.rs  sigsys_handler.rs  vstate.rs
vmm/src/device_manager/: legacy.rs  mmio.rs
vmm/src/vmm_config/: drive.rs  instance_info.rs
(+8 files in other folders)
